# BalancedTernaryConverter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cc  new.cc
src/: CMakeLists.txt  balanced_ternary_converter.cc  balanced_ternary_converter.cpp  balanced_ternary_converter.h  main.cpp
ternaryConverterv1.1/: balancedConverter.cpp  balancedConverter.hpp  balancedTernaryConverter.hpp  main.cpp  ternaryConverter.cpp  ternaryConverter.hpp
ternaryConverterv1.2/: balancedTernaryConverter.cc
terneryConverterv0.1/: terneryConverter.cpp
